Issue #1422: Trying shippable.

--- a/core/misc/travis-ci/php-fpm.conf
+++ b/core/misc/travis-ci/php-fpm.conf
@@ -6,13 +6,13 @@
 ; explaination of all options.
 
 [www]
-user = nobody
-group = nobody
+user = www-data
+group = www-data
 listen = 127.0.0.1:9000
 
 ; Specify the nice(2) priority to apply to the pool processes (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lower priority)
-process.priority = -19
+process.priority = -10
 
 ; Spawn a static number of available PHP processes. This should greater than the
 ; number concurrent tests run in .travis.yml + one for the main script itself.
