--- a/core/misc/travis-ci/vhost.conf
+++ b/core/misc/travis-ci/vhost.conf
@@ -7,16 +7,15 @@
 #
 <VirtualHost *:80>
   ServerAdmin webmaster@localhost
-  DocumentRoot /var/www
+  ServerName localhost
+  DocumentRoot /var/www/html
 
   <Directory />
     Options FollowSymLinks
     AllowOverride None
   </Directory>
 
-  # This directory will be replaced with the appropriate web root by the
-  # .travis.yml configuration.
-  <Directory /var/www>
+  <Directory /var/www/html>
     Options Indexes FollowSymLinks MultiViews ExecCGI
     AllowOverride All
     Order allow,deny
@@ -40,5 +39,4 @@
   LogLevel warn
 
   ErrorLog ${APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
