--- a/.github/workflows/simpletest.yaml
+++ b/.github/workflows/simpletest.yaml
@@ -58,51 +58,29 @@ jobs:
           sudo $GITHUB_WORKSPACE/.github/_scripts/define-ci-vhost.sh
           echo "new 000-default.conf file:"
           sudo cat /etc/apache2/sites-available/000-default.conf
-          sudo mkdir -p /var/www/html/files
-          sudo chmod -R 777 /var/www/html/files
-          export APACHE_RUN_USER=runner
-          export APACHE_RUN_GROUP=runner
           # Start apache.
           sudo service apache2 restart
 
       - name: Install Backdrop
         run: |
+          echo "Creating database."
           sudo mysql -u root -proot -e "CREATE DATABASE backdrop; GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost'; FLUSH PRIVILEGES;"
           cd /var/www/html
+          echo "Setting file system permissions."
+          sudo mkdir -p /var/www/html/files
+          sudo chown www-data:www-data /var/www/html/files
+          sudo chmod -R 777 /var/www/html/settings.php
           echo "Installing the site."
-          ./core/scripts/install.sh --db-url=mysql://root:root@localhost/backdrop
-          sudo chmod -R 777 /var/www/html/files
-          ls -la /var/www/html/files
+          sudo -u www-data -g www-data ./core/scripts/install.sh --db-url=mysql://root:root@localhost/backdrop
 
-      - name: Check localhost domains
+      - name: Confirm PHP through Apache
         run: |
           echo "Hello world test"
-          echo "<?php
-            echo 'Hello from PHP ' . PHP_VERSION;
-            define('BACKDROP_ROOT', getcwd());
-            require_once BACKDROP_ROOT . '/core/includes/bootstrap.inc';
-            require_once BACKDROP_ROOT . '/core/includes/install.inc';
-            backdrop_bootstrap(BACKDROP_BOOTSTRAP_FULL);
-            config_set('system.core', 'error_level', 'all');
-            print_r(system_get_requirements());
-            print "\nEnd\n";
-          ?>" > /var/www/html/test.php
-          curl http://localhost/test.php
+          echo "<?php echo 'Hello from PHP ' . PHP_VERSION; ?>" > /var/www/html/test.php
+          curl --silent http://localhost/test.php
 
       - name: Run SimpleTests
         run: |
           echo "Running tests."
           cd /var/www/html
-          ./core/scripts/run-tests.sh --force --verbose --color --url http://localhost/ --group Layout
-
-#      - uses: actions/upload-artifact@v2
-#        if: always()
-#        with:
-#          name: browser_output
-#          path: /var/www/html/web/sites/simpletest/browser_output
-#
-#      - uses: actions/upload-artifact@v2
-#        if: always()
-#        with:
-#          name: screenshots
-#          path: /var/www/html/tests/artifacts
+          sudo -u www-data -g www-data ./core/scripts/run-tests.sh --force --verbose --color --concurrency 10 --all
