--- a/.github/workflows/simpletest.yaml
+++ b/.github/workflows/simpletest.yaml
@@ -83,4 +83,4 @@ jobs:
         run: |
           echo "Running tests."
           cd /var/www/html
-          sudo -u www-data -g www-data ./core/scripts/run-tests.sh --force --verbose --color --concurrency 4 --all
+          sudo -u www-data -g www-data ./core/scripts/run-tests.sh --force --verbose --color --all
