--- a/.github/workflows/simpletest.yaml
+++ b/.github/workflows/simpletest.yaml
@@ -1,7 +1,8 @@
 name: Simpletest PHP 7.4
 on:
-  pull_request:
-    branches: [ 1.x ]
+  push:
+    branches:
+      - '*'
 
 env:
   CI: true
@@ -13,7 +14,7 @@ jobs:
     timeout-minutes: 60
     defaults:
       run:
-        shell: bash
+        shell: bash {0}
 
     steps:
       # Set PHP version.
@@ -38,20 +39,31 @@ jobs:
           sudo chown -R runner:runner /var/www/
           ls -lsah /var/www/html
 
+      - name: Move MySQL storage to memory
+        run: |
+          #sudo df -h
+          #sudo mount -o remount,size=2G /dev/shm
+          mysql --version
+          sudo systemctl stop mysql.service
+          sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
+          sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
+          sudo mv /var/lib/mysql /dev/shm/mysql
+          sudo chown -R mysql:mysql /dev/shm/mysql
+          sudo ln -s /dev/shm/mysql /var/lib/mysql
+          sudo chown -h mysql:mysql /var/lib/mysql
+
       - name: Start MySQL
         run: |
           # Add MySQL configuration.
           sudo cp $GITHUB_WORKSPACE/.github/_scripts/mysqld-backdrop.cnf /etc/mysql/mysql.conf.d/mysqld.conf
           # Start MySQL
           sudo systemctl start mysql.service
+          sudo systemctl status mysql.service
 
       - name: Prepare environment
         run: |
           # Install Apache
           sudo apt-get install -y apache2-bin apache2 --no-install-recommends
-          #sudo rm -rf /var/lib/apt/lists/*
-          #sudo sed -ri 's/^export ([^=]+)=(.*)$/: ${\1:=\2}\nexport \1/' /etc/apache2/envvars
-          #sudo sed -i 's/Require local/#Require local/' /etc/apache2/mods-available/status.conf
           sudo a2enmod rewrite proxy_fcgi
           sudo a2enconf php7.4-fpm
           sudo a2ensite 000-default.conf
@@ -83,4 +95,4 @@ jobs:
         run: |
           echo "Running tests."
           cd /var/www/html
-          sudo -u www-data -g www-data ./core/scripts/run-tests.sh --force --verbose --color --all --concurrency 4
+          sudo -u www-data -g www-data ./core/scripts/run-tests.sh --cache --force --verbose --color --all --concurrency 4
