--- a/.github/workflows/simpletest.yaml
+++ b/.github/workflows/simpletest.yaml
@@ -41,12 +41,16 @@ jobs:
 
       - name: Move MySQL storage to memory
         run: |
-          #sudo df -h
-          #sudo mount -o remount,size=2G /dev/shm
+          # Moving MySQL's disk storage to memory can speed up things.
+          # See http://serebrov.github.io/html/2012-12-17-unit-speed-mysql-to-mem.html
           mysql --version
           sudo systemctl stop mysql.service
+
+          # Disable AppArmor for MySQL so it can read the shared memory disk.
           sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
           sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
+
+          # Move and symlink the MySQL storage directory (/var/lib/mysql).
           sudo mv /var/lib/mysql /dev/shm/mysql
           sudo chown -R mysql:mysql /dev/shm/mysql
           sudo ln -s /dev/shm/mysql /var/lib/mysql
